change the behaviours of functional APIs